--- a/wiki/PathwayInteractions.wiki
+++ b/wiki/PathwayInteractions.wiki
@@ -2,4 +2,6 @@
 
 *Source code* for the pathway interaction analysis can be found *[http://code.google.com/p/tkelder/source/browse/#svn%2Ftrunk%2Fpathway-interactions here]*.
 
-*Supplementary data* including input data, RData files and Cytoscape sessions can be found *[http://ftp.bigcat.unimaas.nl/shared_folder/thomas/pathway-interactions/ here]* (login required).
+*Supplementary figures and tables* (PDF) accompanying the paper be found *[http://ftp.bigcat.unimaas.nl/shared_folder/thomas/pathway-interactions/KelderSupplFigures.pdf here]*.
+
+*Supplementary data* including input data, RData files and Cytoscape sessions can be found *[http://ftp.bigcat.unimaas.nl/shared_folder/thomas/pathway-interactions/ here]*.
